public/assets/css/style.css
/*
Template Name: Luique
Template URI: https://bslthemes.com/
Author: bslthemes
Author URI: https://themeforest.net/user/bslthemes
Description: Luique - Resume & Personal Portfolio HTML5 Template
Version: 1.0
*/

/* TABLE OF CONTENTS
	- Base Styles
	|--Typography
	|--Alignment
	|--Wrapper
	|--Breadcrumbs
	|--Preloader
	|--Cursor
	|--Swiper
	|--Animations
	- Header
	- Footer
	- Sections
	|--Section Started Heading
	|--Section Hero Started
	|--Section Profile
	|--Section Resume
	|--Section Services
	|--Section Works
	|--Section Pricing
	|--Section Testimonials
	|--Section Blog
	|--Section Contacts
	|--Section Project Details
	|--Section Image Large
	|--Section Video Large
	|--Section Navigation
	|--Section Archive
	|--Section Sidebar
	- Responsive
*/


/**
* Base Styles
**/

* {
	outline: none;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

::-webkit-input-placeholder {
	color: rgba(0, 0, 0, 0.5);
}

::-moz-placeholder {
	color: rgba(0, 0, 0, 0.5);
}

:-moz-placeholder {
	color: rgba(0, 0, 0, 0.5);
}

:-ms-input-placeholder {
	color: rgba(0, 0, 0, 0.5);
}

html,
body {
	margin: 0;
	padding: 0;
	height: auto !important;
	font-size: 16px;
	color: #262626;
	font-family: "Jost", sans-serif;
	font-weight: 400;
	line-height: 1.7;
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: 100%;
}

body {
	background-color: #F0EBE3;
}

body.no-scroll {
	overflow: hidden;
}

a {
	color: #29a587;
	text-decoration: none;
	cursor: pointer;
	outline: none;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
}

a:link {
	color: #29a587;
}

a:active {
	color: #29a587;
}

a:visited {
	color: #29a587;
}

a:hover {
	text-decoration: underline;
}

a img {
	border: none;
}

img {
	max-width: 100%;
}

input,
textarea,
button {
	font-family: "Jost";
}

label {
	cursor: pointer;
}

iframe {
	max-width: 100%;
}

.comment-form-cookies-consent input {
	margin-right: 10px;
	position: relative;
	top: 7px;
}

.comment-form-cookies-consent label {
	display: inline-block;
	vertical-align: top;
}

.clear {
	clear: both;
}

b, strong {
	font-weight: 700;
}

/* - Typography */

h1,
h2,
h3,
h4,
h5,
h6,
.m-title {
	font-weight: 400;
	font-family: "Jost";
	margin: 0;
	margin-bottom: 15px;
	color: #000;
	font-weight: 700;
	line-height: 1.3;
}

h1 {
	font-size: 44px;
	text-transform: uppercase;
	letter-spacing: 0.05em;
}

h2, .m-title {
	font-size: 41px;
	text-transform: uppercase;
	letter-spacing: 0.05em;
}

h3 {
	font-size: 38px;
}

h4 {
	font-size: 32px;
}

h5,
.lui-title {
	font-size: 24px;
}

h6 {
	font-size: 21px;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
	margin: 0;
	margin-bottom: 30px;
}

p {
	padding: 0;
	margin: 30px 0;
}

strong {
	font-weight: 700;
}

a.lnk,
.lnk {
	height: 22px;
	line-height: 22px;
	position: relative;
	display: inline-block;
	vertical-align: top;
	font-size: 16px;
	color: #000;
	font-weight: 700;
	text-decoration: none;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
}

a.lnk:after,
.lnk:after {
	margin-left: 20px;
	content: "\f061";
	position: relative;
	left: 0;
	top: 1px;
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
	color: #29a587;
	transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
}

a.lnk:hover:after,
.lnk:hover:after {
	margin-left: 15px;
}

a.btn-lnk,
.btn-lnk {
	padding-left: 70px;
	height: 56px;
	line-height: 56px;
	position: relative;
	display: inline-block;
	vertical-align: top;
	font-size: 13px;
	color: #000;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.05em;
	text-decoration: none;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
}

a.btn-lnk:before,
.btn-lnk:before {
	content: '';
	position: absolute;
	left: -1px;
	top: 50%;
	margin-top: -1px;
	height: 2px;
	width: 40px;
	background: #000;
}

a.btn,
.btn,
.elementor a.btn,
.elementor .btn,
button,
input[type="submit"] {
	padding: 0 40px;
	position: relative;
	overflow: hidden;
	display: inline-block;
	vertical-align: top;
	font-size: 13px;
	color: #000;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.05em;
	height: 56px;
	line-height: 52px;
	text-align: center;
	text-decoration: none;
	outline: none!important;
	cursor: pointer;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
  border: 2px solid #000;
  background: transparent;
  box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
	border-radius: 56px;
	-webkit-border-radius: 56px;
}

.btn.btn-solid,
.elementor .btn.btn-solid {
	color: #fff;
}

.btn-solid:after,
.elementor .btn-solid:after {
	content: "\f061";
	position: absolute;
	right: 30px;
	top: 0;
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
	color: #fff;
	transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
	z-index: 2;
}

.btn-solid:hover:after,
.elementor .btn-solid:hover:after {
	right: 35px;
}

input[type="submit"] {
	color: #FFF;
	background: #29a587;
	outline: none;
	cursor: pointer;
}

a.btn:before,
.btn:before,
button:before {
	content: '';
	position: absolute;
	left: 50%;
	top: 50%;
	width: 0%;
	height: 0%;
	background: #29a587;
	transition: all 0.6s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.6s cubic-bezier(0.3, 0, 0.3, 1);
	transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
	border-radius: 56px;
	-webkit-border-radius: 56px;
	opacity: 0;
	z-index: -1;
	filter: blur(10px);
}

a.btn:before,
.btn:before,
button:before {
	z-index: 1;
}

.btn span,
button span {
	position: relative;
	z-index: 2;
}

a.btn:hover,
.btn:hover,
button:hover {
	color: #FFF;
}
/* ... */

